force-app/main/default/objects/Visit_Task__c/Visit_Task__c.object-meta.xml
<CustomObject>
    <label>Visit Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Visit Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>