force-app/main/default/objects/Visit_Task__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Visit Tasks</relationshipLabel>
    <relationshipName>Visit_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>