force-app/main/default/objects/Visit_Task__c/fields/Beat_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name_Text__c</fullName>
    <formula>IF(
  ISBLANK(Beat__r.Name),
  &quot;No Beat&quot;,
 Beat__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Name Text</label>
    <type>Text</type>
</CustomField>