force-app/main/default/objects/Visit_Task__c/fields/Check_in_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Accuracy__c</fullName>
    <label>Check-in Accuracy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>