force-app/main/default/objects/Visit_Task__c/fields/Check_In_Duration__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Duration__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(Checked_Out_Time__c )),
    NOT(ISNULL(Checked_In_Time__c))
  ),
  ROUND((Checked_Out_Time__c - Checked_In_Time__c) * 24 * 60,0),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>