force-app/main/default/objects/Visit_Task__c/fields/Checked_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Location__c</fullName>
    <label>Checked In Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>