force-app/main/default/objects/Visit_Task__c/fields/Checked_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_Time__c</fullName>
    <label>Checked Out Time</label>
    <type>DateTime</type>
</CustomField>