force-app/main/default/objects/Visit_Task__c/fields/Count_Of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Orders__c</fullName>
    <label>Count Of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>