force-app/main/default/objects/Visit_Task__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Tasks (Distributor)</relationshipLabel>
    <relationshipName>Visit_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>