force-app/main/default/objects/Visit_Task__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <formula>IF(
   Distributor__r.Code__c != NULL,
   Distributor__r.Code__c ,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Code</label>
    <type>Text</type>
</CustomField>