force-app/main/default/objects/Visit_Task__c/fields/End_Call_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Call_Location__c</fullName>
    <label>End Call Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>