force-app/main/default/objects/Visit_Task__c/fields/End_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Call_Time__c</fullName>
    <label>End Call Time</label>
    <type>DateTime</type>
</CustomField>