force-app/main/default/objects/Visit_Task__c/fields/End_Call_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Call_Time_Text__c</fullName>
    <formula>IF(
  ISBLANK( End_Call_Time__c ),
  &quot;&quot;,
  TEXT(
    CASE(
      MOD(HOUR(TIMEVALUE( End_Call_Time__c  + (5.5/24))),12),
      0, 12,
      MOD(HOUR(TIMEVALUE( End_Call_Time__c  + (5.5/24))),12)
    )
  )
  &amp; &quot;:&quot; &amp;
  RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE( End_Call_Time__c + (5.5/24)))),2)
  &amp; &quot; &quot; &amp;
  IF(HOUR(TIMEVALUE( End_Call_Time__c + (5.5/24))) &lt; 12, &quot;am&quot;, &quot;pm&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Call Time (Text)</label>
    <type>Text</type>
</CustomField>