force-app/main/default/objects/Visit_Task__c/fields/Failed_Check_in_Location__c.field-meta.xml
<CustomField>
    <fullName>Failed_Check_in_Location__c</fullName>
    <label>Failed Check-in Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>