force-app/main/default/objects/Visit_Task__c/fields/No_of_Physical_Visit_Order_Taken__c.field-meta.xml
<CustomField>
    <fullName>No_of_Physical_Visit_Order_Taken__c</fullName>
    <formula>if ( AND(
         NOT(ISBLANK(Checked_In_Time__c)),
         NOT(ISBLANK(Checked_In_Location__c))
        ) ,
    Count_Of_Orders__c , 0
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Physical Visit Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>