force-app/main/default/objects/Visit_Task__c/fields/No_Of_Tele_Visit_Order_Taken__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Tele_Visit_Order_Taken__c</fullName>
    <formula>if ( AND(
         NOT(ISBLANK(Start_Call_Time__c)),
         NOT(ISBLANK( Start_Call_Location__c )),
         Order_Placed__c 
        ) ,
    Count_Of_Orders__c , 0
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Tele Visit Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>