force-app/main/default/objects/Visit_Task__c/fields/Old_Retailer_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Retailer_Code__c</fullName>
    <formula>if(
   Retailer__r.Code__c != Null,
   Retailer__r.Code__c,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Retailer Code</label>
    <type>Text</type>
</CustomField>