force-app/main/default/objects/Visit_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order NA</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Visit Tasks</relationshipLabel>
    <relationshipName>Visit_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>