force-app/main/default/objects/Visit_Task__c/fields/Order_Placed__c.field-meta.xml
<CustomField>
    <fullName>Order_Placed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Placed</label>
    <type>Checkbox</type>
</CustomField>