force-app/main/default/objects/Visit_Task__c/fields/OrderCustom__c.field-meta.xml
<CustomField>
    <fullName>OrderCustom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Visit Tasks</relationshipLabel>
    <relationshipName>Visit_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>