force-app/main/default/objects/Visit_Task__c/fields/Physical_Visit_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Physical_Visit_Order_Value__c</fullName>
    <formula>if ( AND(
NOT(ISBLANK( Checked_In_Time__c )),
NOT(ISBLANK( Checked_In_Location__c )),
Order_Placed__c
) ,
Total_Order_Amount__c , 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Visit Order (Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>