force-app/main/default/objects/Visit_Task__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual visit</fullName>
            </value>
            <value>
                <fullName>Joint visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>