force-app/main/default/objects/Visit_Task__c/fields/Retailer_Address_New__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Address_New__c</fullName>
    <formula>IF(NOT(ISBLANK( Retailer__r.BillingStreet)), Retailer__r.BillingStreet, &apos;&apos;) &amp;
IF(NOT(ISBLANK(Retailer__r.BillingCity)),
IF(NOT(ISBLANK(Retailer__r.BillingStreet)), &apos;, &apos; &amp; Retailer__r.BillingCity, Retailer__r.BillingCity), &apos;&apos;) &amp;
IF(NOT(ISBLANK(Retailer__r.BillingState)),
IF(OR(NOT(ISBLANK(Retailer__r.BillingCity)), NOT(ISBLANK(Retailer__r.BillingStreet))), &apos;, &apos; &amp; Retailer__r.BillingState, Retailer__r.BillingState), &apos;&apos;) &amp;
IF(NOT(ISBLANK(Retailer__r.BillingPostalCode)),
IF(OR(NOT(ISBLANK(Retailer__r.BillingCity)), NOT(ISBLANK(Retailer__r.BillingState))), &apos; &apos; &amp; Retailer__r.BillingPostalCode, Retailer__r.BillingPostalCode), &apos;&apos;) &amp;
IF(NOT(ISBLANK(Retailer__r.BillingCountry)),
IF(OR(NOT(ISBLANK(Retailer__r.BillingCity)), NOT(ISBLANK(Retailer__r.BillingState)), NOT(ISBLANK(Retailer__r.BillingPostalCode))), &apos;, &apos; &amp; Retailer__r.BillingCountry, Retailer__r.BillingCountry), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Address New</label>
    <type>Text</type>
</CustomField>