force-app/main/default/objects/Visit_Task__c/fields/Retailers_Address__c.field-meta.xml
<CustomField>
    <fullName>Retailers_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.BillingStreet)), Account__r.BillingStreet, &apos;&apos;) &amp; 
IF(NOT(ISBLANK(Account__r.BillingCity)), 
    IF(NOT(ISBLANK(Account__r.BillingStreet)), &apos;, &apos; &amp; Account__r.BillingCity, Account__r.BillingCity), &apos;&apos;) &amp;
IF(NOT(ISBLANK(Account__r.BillingState)), 
    IF(OR(NOT(ISBLANK(Account__r.BillingCity)), NOT(ISBLANK(Account__r.BillingStreet))), &apos;, &apos; &amp; Account__r.BillingState, Account__r.BillingState), &apos;&apos;) &amp; 
IF(NOT(ISBLANK(Account__r.BillingPostalCode)), 
    IF(OR(NOT(ISBLANK(Account__r.BillingCity)), NOT(ISBLANK(Account__r.BillingState))), &apos; &apos; &amp; Account__r.BillingPostalCode, Account__r.BillingPostalCode), &apos;&apos;) &amp;
IF(NOT(ISBLANK(Account__r.BillingCountry)), 
    IF(OR(NOT(ISBLANK(Account__r.BillingCity)), NOT(ISBLANK(Account__r.BillingState)), NOT(ISBLANK(Account__r.BillingPostalCode))), &apos;, &apos; &amp; Account__r.BillingCountry, Account__r.BillingCountry), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailers Address</label>
    <type>Text</type>
</CustomField>