force-app/main/default/objects/Visit_Task__c/fields/Start_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Start_Call_Duration__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(Start_Call_Time__c)),
    NOT(ISNULL(End_Call_Time__c))
  ),
  ROUND((End_Call_Time__c - Start_Call_Time__c) * 24 * 60, 0),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Call Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>