force-app/main/default/objects/Visit_Task__c/fields/Start_Call_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Call_Location__c</fullName>
    <label>Start Call Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>