force-app/main/default/objects/Visit_Task__c/fields/Start_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Call_Time__c</fullName>
    <label>Start Call Time</label>
    <type>DateTime</type>
</CustomField>