force-app/main/default/objects/Visit_Task__c/fields/Task_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Planned_Date__c</fullName>
    <label>Task Planned Date</label>
    <type>Date</type>
</CustomField>