force-app/main/default/objects/Visit_Task__c/fields/Tele_Visit_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Tele_Visit_Order_Value__c</fullName>
    <formula>if ( AND(
NOT(ISBLANK(Start_Call_Time__c)),
NOT(ISBLANK( Start_Call_Location__c )),
Order_Placed__c
) ,
Total_Order_Amount__c , 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tele Visit Order (Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>