force-app/main/default/objects/Visit_Task__c/fields/Total_Check_In_and_Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Check_In_and_Check_Out_Time__c</fullName>
    <formula>( Checked_Out_Time__c - Checked_In_Time__c ) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Check In and Check Out Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>