force-app/main/default/objects/Visit_Task__c/fields/Total_No_Of_Order_Taken__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Order_Taken__c</fullName>
    <formula>No_Of_Tele_Visit_Order_Taken__c + No_of_Physical_Visit_Order_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No Of Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>