force-app/main/default/objects/Visit_Task__c/fields/Total_No_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Visit__c</fullName>
    <formula>No_Of_Physical_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No Of Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>