force-app/main/default/objects/Visit_Task__c/fields/Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount__c</fullName>
    <label>Total Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>