force-app/main/default/objects/Visit_Task__c/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Retailer__c)),
        NOT(ISBLANK(Account__c)),
        OR(
            ISBLANK(Distributor__c),
            NOT(ISBLANK(Distributor__c))
        )
    ),
    &quot;Retailer Type&quot;,
    IF(
        AND(
            NOT(ISBLANK(Distributor__c)),
            ISBLANK(Retailer__c),
            ISBLANK(Account__c)
        ),
        &quot;Distributor Type&quot;,
        NULL
    )
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>