force-app/main/default/objects/Visit_Task__c/fields/Unproductive_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Unproductive_Reasons__c</fullName>
    <label>Unproductive Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shop closed</fullName>
            </value>
            <value>
                <fullName>Not interested - pricing / quality issue</fullName>
            </value>
            <value>
                <fullName>Not interested - competing products / brands available</fullName>
            </value>
            <value>
                <fullName>Old stock available</fullName>
            </value>
            <value>
                <fullName>Owner not available</fullName>
            </value>
            <value>
                <fullName>Joint Visit</fullName>
            </value>
            <value>
                <fullName>Place Order Tomorrow</fullName>
            </value>
            <value>
                <fullName>Order on Next Visit</fullName>
            </value>
            <value>
                <fullName>Stock Audit</fullName>
            </value>
            <value>
                <fullName>Freezer Shifting</fullName>
            </value>
            <value>
                <fullName>Sales Audit</fullName>
            </value>
            <value>
                <fullName>Freezer Audit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Distributor Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>