force-app/main/default/objects/Visit_Task__c/fields/Visit_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Name__c</fullName>
    <formula>Visit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Name</label>
    <type>Text</type>
</CustomField>