force-app/main/default/objects/Visit_Task__c/fields/Visit_Number__c.field-meta.xml
<CustomField>
    <fullName>Visit_Number__c</fullName>
    <label>Visit Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>