force-app/main/default/objects/Visit_Task__c/fields/Visitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>