force-app/main/default/objects/Visit_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Visit__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Planned_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Retailer__c</columns>
    <columns>Distributor__c</columns>
    <columns>Visitor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>