force-app/main/default/objects/Visit_Task__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Visit__c</columns>
    <columns>Beat__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Planned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Visits</label>
</ListView>