force-app/main/default/objects/Visit_Task__c/listViews/My_Visit_Task.listView-meta.xml
<ListView>
    <fullName>My_Visit_Task</fullName>
    <columns>NAME</columns>
    <columns>Retailer__c</columns>
    <columns>Visit__c</columns>
    <columns>Task_Planned_Date__c</columns>
    <columns>Beat__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Visit Task</label>
</ListView>